[tool.poetry]
name = "gen3qa-controller"
version = "0.1.0"
description = "K8s Controller to orchestrate automated tests"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
kubernetes = "^12.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
